--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "portfolio",
   "private": true,
   "version": "0.1.0",
-  "workspaces": ["apps/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "build": "pnpm -r build",
     "dev": "pnpm -r dev",
-    "lint": "pnpm -r lint",
-    "test": "pnpm -r test"
+    "build": "pnpm -r build",
+    "lint": "pnpm -r lint || echo 'no lint'",
+    "test": "pnpm -r test || echo 'no tests'",
+    "prepare": "husky"
   }
 }
