--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,14 +1,12 @@
 {
-"compilerOptions": {
-"target": "ES2020",
-"module": "ES2020",
-"moduleResolution": "node",
-"outDir": "dist",
-"rootDir": "src",
-"esModuleInterop": true,
-"forceConsistentCasingInFileNames": true,
-"strict": true,
-"skipLibCheck": true
-},
-"include": ["src"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Node",          // ("Bundler" also fine in TS 5+)
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "types": ["node"]                    // node types are enough; others auto-resolve
+  },
+  "include": ["src", "prisma", "src/types/**/*.d.ts"]
 }
