Adding proper vercel scripts for husky.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,8 +10,7 @@
     "generate": "prisma generate",
     "migrate": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "tsx prisma/seed.ts",
-    "prepare": "husky"
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
