--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,1 +1,28 @@
-{"name":"@app/frontend","version":"0.1.0","private":true,"type":"module","scripts":{"dev":"vite","build":"tsc -b && vite build","preview":"vite preview"},"dependencies":{"axios":"^1.7.2","react":"^18.3.1","react-dom":"^18.3.1","react-quill":"^2.0.0","react-router-dom":"^6.26.1"},"devDependencies":{"@types/react":"^18.2.66","@types/react-dom":"^18.2.22","@vitejs/plugin-react":"^5.0.4","autoprefixer":"^10.4.19","postcss":"^8.4.39","tailwindcss":"^3.4.10","typescript":"^5.5.4","vite":"^5.4.2"}}
+{
+  "name": "@app/frontend",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "axios": "^1.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.26.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2"
+  }
+}
