--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,11 +2,15 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "Node",          // ("Bundler" also fine in TS 5+)
+    "moduleResolution": "Node",
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "types": ["node"]                    // node types are enough; others auto-resolve
+    "strict": true,
+    "types": ["node"]
   },
-  "include": ["src", "prisma", "src/types/**/*.d.ts"]
+  "include": ["src/**/*"]
 }
