--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,10 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc -p . && prisma generate",
+    "build": "prisma generate && tsc -p .",
     "generate": "prisma generate",
-    "migrate": "prisma migrate dev",
     "migrate:deploy": "prisma migrate deploy",
     "seed": "tsx prisma/seed.ts"
   },
@@ -23,10 +21,14 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.19",
     "prisma": "^5.22.0",
-    "tsx": "^4.20.0",
-    "typescript": "^5.9.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.0"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
