--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,5 +12,6 @@
     "strict": true,
     "types": ["node"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["prisma/**/*", "node_modules", "dist"]
 }
