--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -2,7 +2,7 @@
   "name": "@app/backend",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
+  "type": "commonjs",
   "engines": { "node": "20.x" },
   "scripts": {
     "dev": "tsx watch src/server.ts",
