--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -12,6 +12,6 @@
     "strict": true,
     "types": ["node"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types/**/*.d.ts"],
   "exclude": ["prisma/**/*", "node_modules", "dist"]
 }
