--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,7 +9,10 @@
     "build": "prisma generate && tsc -p .",
     "generate": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
-    "seed": "tsx prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts",
+    "make-admin": "tsx scripts/make-admin.ts",
+    "change-password": "tsx scripts/change-password.ts"
+
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
