--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,6 +1,10 @@
 {
-    "compilerOptions": {
-    "types": ["vite/client"],
+  "compilerOptions": {
+    "types": ["vite/client", "node"],
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -12,6 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true
-    },
-    "include": ["src", "vite.config.ts", "src/vite-env.d.ts"]
+  },
+  "include": ["src", "vite.config.ts", "src/vite-env.d.ts"]
 }
