--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate && tsc -p .",
+    "start": "prisma migrate deploy && node dist/server.js",
     "generate": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
     "seed": "tsx prisma/seed.ts",
     "make-admin": "tsx scripts/make-admin.ts",
     "change-password": "tsx scripts/change-password.ts"
-
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
