feat: implement comprehensive unit testing framework
Testing Infrastructure Complete
- Jest configuration with TypeScript integration and coverage reporting
- Complete Prisma mocking setup for isolated database testing
- Global test setup with proper environment configuration

Comprehensive Test Coverage (53 passing tests)
- Utility Layer Tests (28 tests):
  - JWT operations: token creation, verification, expiration handling
  - Password hashing: bcrypt integration, security validation, edge cases
  - Cookie security: environment-based config, CORS settings, security properties

- Service Layer Tests (25 tests):
  - Authentication service: login flow, token validation, comprehensive error handling
  - Post service: CRUD operations, repository integration, business logic validation

Professional Testing Standards
- Type-safe mocking with proper TypeScript integration
- Comprehensive error scenario testing and edge case coverage
- Clean test organization with meaningful describe/it structure
- Isolated unit tests with external dependency mocking

Development Experience Enhancements
- Test scripts: test, test:watch, test:coverage
- Coverage reporting with HTML and LCOV formats
- Fast test execution with proper cleanup between tests

Dependencies & Configuration
- Added Jest, ts-jest, Supertest, @types/bcryptjs for testing
- Updated tsconfig.json to include Jest types
- Created bcryptjs type definitions for proper TypeScript support
- Updated README with comprehensive testing documentation

This establishes a professional-grade testing foundation that ensures code
reliability, prevents regressions, and supports confident refactoring.feat: implement comprehensive unit testing framework

Testing Infrastructure Complete
- Jest configuration with TypeScript integration and coverage reporting
- Complete Prisma mocking setup for isolated database testing
- Global test setup with proper environment configuration

Comprehensive Test Coverage (53 passing tests)
- Utility Layer T

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,7 +10,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*", "types/**/*.d.ts"],
   "exclude": ["prisma/**/*", "node_modules", "dist"]
