--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "type": "commonjs",
-  "engines": { "node": "20.x" },
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate && tsc -p .",
     "start": "prisma migrate deploy && node dist/server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "generate": "prisma generate",
     "migrate:deploy": "prisma migrate deploy",
     "seed": "tsx prisma/seed.ts",
@@ -29,9 +34,14 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.19.19",
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
     "prisma": "^5.22.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.4",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
