--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -32,7 +32,7 @@ jobs:
         cache-dependency-path: pnpm-lock.yaml
     
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
     
     - name: Generate coverage report
       run: pnpm test:coverage
@@ -85,7 +85,7 @@ jobs:
         cache-dependency-path: pnpm-lock.yaml
     
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
     
     - name: Backend quality checks
       run: |
