--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         cache-dependency-path: pnpm-lock.yaml
     
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
     
     - name: Run all tests
       run: |
@@ -167,7 +167,7 @@ jobs:
         cache-dependency-path: pnpm-lock.yaml
     
     - name: Install dependencies
-      run: pnpm install --frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
     
     - name: Build frontend
       run: |
