fix: add Prisma client generation to CI/CD workflows
Resolves TypeScript compilation errors in workflows:
- Module '@prisma/client' has no exported member 'User'
- Module '@prisma/client' has no exported member 'Role'

Changes:
- Add 'pnpm prisma generate' step to ci.yml before type checking and tests
- Add Prisma generation to coverage.yml before test coverage analysis
- Add Prisma generation to deploy.yml before builds and deployment tests
- Ensure generated Prisma types are available for TypeScript compilation

This fixes the test suite failures where Prisma types (User, Role, etc.)
were not available during CI runs, causing both test failures and coverage
collection errors.

All 53 tests now pass successfully with proper coverage reporting.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Install dependencies
       run: pnpm install --no-frozen-lockfile
     
+    - name: Generate Prisma Client
+      run: pnpm prisma generate
+    
     - name: Generate coverage report
       run: pnpm test:coverage
     
