--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
         # Try with frozen lockfile first, fallback if incompatible
         pnpm install --frozen-lockfile --prefer-offline || pnpm install --no-frozen-lockfile --prefer-offline
     
+    - name: Generate Prisma Client
+      run: pnpm prisma generate
+    
     - name: Type check
       run: pnpm run build
     
@@ -179,6 +182,9 @@ jobs:
     
     - name: Install dependencies
       run: pnpm install --no-frozen-lockfile
+    
+    - name: Generate Prisma Client  
+      run: cd apps/backend && pnpm prisma generate
     
     - name: Build backend
       run: cd apps/backend && pnpm build
