fix: resolve CI/CD workflow issues and improve error handling
Performance Workflow Fixes:
- Replace 'pnpm test' with 'pnpm jest' for proper maxWorkers flag support
- Fix Jest command syntax: 'pnpm jest --silent --maxWorkers=1'
- Resolves 'Unknown option: maxWorkers' error in performance testing

Codecov Integration Improvements:
- Add conditional upload: only run when CODECOV_TOKEN is available
- Set fail_ci_if_error: false to prevent CI failures from missing token
- Add fallback messaging when Codecov token not configured
- Graceful degradation: coverage still generated locally without external upload

Documentation Updates:
- Add comprehensive GitHub Actions setup guide in README
- Document required and optional repository secrets (CODECOV_TOKEN, etc.)
- Include branch protection and Actions permissions configuration
- Add Codecov setup instructions with account linking steps

Error Handling:
- CI workflows now handle missing external service tokens gracefully
- Coverage artifacts still uploaded to GitHub Actions even without Codecov
- Performance tests run correctly with proper Jest configuration
- Clear user messaging for optional vs required setup steps

This ensures CI/CD pipeline runs successfully regardless of external
service configuration while maintaining full functionality when available.

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -55,14 +55,21 @@ jobs:
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
+      if: ${{ secrets.CODECOV_TOKEN != '' }}
       with:
         file: ./apps/backend/coverage/lcov.info
         flags: backend
         name: backend-coverage
-        fail_ci_if_error: true
+        fail_ci_if_error: false
         verbose: true
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    
+    - name: Coverage upload status
+      if: ${{ secrets.CODECOV_TOKEN == '' }}
+      run: |
+        echo "⚠️  Codecov token not configured - skipping upload"
+        echo "Coverage report still generated and available as artifact"
     
     - name: Archive coverage artifacts
       uses: actions/upload-artifact@v4
