--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
     
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4
+      if: ${{ secrets.CODECOV_TOKEN != '' }}
       with:
         file: ./apps/backend/coverage/lcov.info
         flags: backend
@@ -68,6 +69,12 @@ jobs:
         fail_ci_if_error: false
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    
+    - name: Coverage summary (fallback)
+      if: ${{ secrets.CODECOV_TOKEN == '' }}
+      run: |
+        echo "📊 Coverage report generated locally (Codecov token not configured)"
+        echo "View detailed coverage at: apps/backend/coverage/index.html"
 
   test-frontend:
     name: Frontend Tests
