fix: resolve GitHub Actions workflow syntax errors
Issues Fixed:
- Remove invalid 'secrets' context usage in if conditions
- GitHub Actions doesn't allow secrets access in conditional expressions
- Replace conditional logic with 'continue-on-error: true' approach

Changes Made:
- coverage.yml: Remove if conditions using secrets.CODECOV_TOKEN
- ci.yml: Remove if conditions using secrets.CODECOV_TOKEN
- Add 'continue-on-error: true' to Codecov upload steps
- Maintain 'fail_ci_if_error: false' for graceful handling
- Replace conditional fallback messages with universal coverage summary

Workflow Behavior:
- Codecov upload attempts regardless of token availability
- Workflow continues successfully even if Codecov fails
- Coverage artifacts still uploaded to GitHub Actions
- Clear messaging about coverage generation status

This resolves the workflow validation errors:
'Unrecognized named-value: secrets' at positions in if expressions
while maintaining the desired behavior of graceful Codecov handling.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,6 @@ jobs:
     
     - name: Upload coverage reports
       uses: codecov/codecov-action@v4
-      if: ${{ secrets.CODECOV_TOKEN != '' }}
       with:
         file: ./apps/backend/coverage/lcov.info
         flags: backend
@@ -69,12 +68,15 @@ jobs:
         fail_ci_if_error: false
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+      continue-on-error: true
     
-    - name: Coverage summary (fallback)
-      if: ${{ secrets.CODECOV_TOKEN == '' }}
+    - name: Coverage summary
       run: |
-        echo "📊 Coverage report generated locally (Codecov token not configured)"
-        echo "View detailed coverage at: apps/backend/coverage/index.html"
+        echo "📊 Coverage report generated - check artifacts for details"
+        if [ -f "./apps/backend/coverage/text-summary.txt" ]; then
+          echo "Coverage Summary:"
+          cat ./apps/backend/coverage/text-summary.txt
+        fi
 
   test-frontend:
     name: Frontend Tests
