--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -55,7 +55,6 @@ jobs:
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
-      if: ${{ secrets.CODECOV_TOKEN != '' }}
       with:
         file: ./apps/backend/coverage/lcov.info
         flags: backend
@@ -64,12 +63,7 @@ jobs:
         verbose: true
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-    
-    - name: Coverage upload status
-      if: ${{ secrets.CODECOV_TOKEN == '' }}
-      run: |
-        echo "⚠️  Codecov token not configured - skipping upload"
-        echo "Coverage report still generated and available as artifact"
+      continue-on-error: true
     
     - name: Archive coverage artifacts
       uses: actions/upload-artifact@v4
