--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -175,7 +175,7 @@ jobs:
         cache-dependency-path: pnpm-lock.yaml
     
     - name: Install dependencies
-      run: pntml install --no-frozen-lockfile
+      run: pnpm install --no-frozen-lockfile
     
     - name: Generate Prisma Client
       run: cd apps/backend && pnpm prisma generate
