--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -36,6 +36,11 @@ jobs:
     - name: Install dependencies
       run: pnpm install --no-frozen-lockfile
     
+    - name: Generate Prisma Client
+      run: |
+        cd apps/backend
+        pnpm prisma generate
+    
     - name: Backend performance benchmarks
       run: |
         cd apps/backend
