chore: ignore uploads directory and remove test artifacts
- Add apps/backend/uploads/ to .gitignore to prevent test artifacts from being tracked
- Remove existing test image files that were accidentally committed
- Uploads directory contains temporary test files and user-uploaded content that should not be in version control

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ apps/backend/prisma/*.db
 apps/backend/prisma/migrations/*/steps.json
 
 
+# Uploads (test artifacts and user uploads)
+apps/backend/uploads/
+
 # Logs
 *.log
 npm-debug.log*
