--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "acme-ui": "^0.1.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
